[package]
edition = "2021"
name = "kill_key"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { version = "0.5.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
] }
embassy-usb = { version = "0.1.0", features = ["defmt", "usbd-hid"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }

defmt = "0.3.6"
defmt-rtt = "0.4"
usbd-hid = "0.6.1"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
embassy-sync = "0.5.0"

fixed = "1.23.1"
fixed-macro = "1.2"
pio-proc = "0.2"
pio = "0.2.1"
smart-leds = "0.3.0"

[profile.release]
debug = 2
