[package]
edition = "2021"
name = "kill_key"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.3.0", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
    "rp2040"
] }
embassy-usb = { version = "0.4.0", features = ["defmt", "usbd-hid"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }

defmt = "0.3.10"
defmt-rtt = "0.4.1"
usbd-hid = "0.8.2"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
embassy-sync = "0.6.2"

fixed = "1.28.0"
fixed-macro = "1.2.0"
pio-proc = "0.2.2"
pio = "0.2.1"
smart-leds = "0.4.0"

[profile.release]
debug = 2
